# Trajax

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  SECURITY.md  justfile  mkdocs.yml  pyproject.toml  requirements.txt  todo.md
.benchmarks/Windows-CPython-3.13-64bit/: 0001_75a9f875753aad19aa4706e4f6776263db02c50a_20251219_113354_uncommited-changes.json
docs/: index.md
docs/api/: boundary.md  collectors.md  costs.md  index.md  metrics.md  model.md  mppi.md  obstacles.md  predictor.md  sampler.md  trajectory.md  types.md  visualizer.md
docs/examples/: 01_basic_path_following.py  02_path_following_with_boundaries.py  03_obstacle_avoidance.py  04_obstacle_avoidance_with_uncertainty.py
docs/guide/: backends.md  boundaries.md  concepts.md  conventions.md  costs.md  estimation.md  examples.md  features.md  getting-started.md  gotchas.md  metrics.md  mppi.md  obstacles.md  trajectories.md  visualizer.md
docs/javascripts/: lazy-iframes.js
docs/stylesheets/: components.css  extra.css  layout.css  palette.css
documents/: examples.typ  model.typ  plots.typ  references.bib  typst.toml
faran/: __init__.py  factory.py  jax.py  namespace.py  numpy.py
faran/collectors/: __init__.py  access.py  factory.py  obstacles.py  registry.py  risk.py  state.py
faran/costs/: __init__.py  accelerated.py  basic.py  factory.py
faran/filters/: __init__.py  factory.py
faran/metrics/: __init__.py  collision.py  comfort.py  constraint.py  error.py  factory.py  registry.py  task.py
faran/models/: accelerated.py  basic.py  factory.py
faran/mpcc/: __init__.py  accelerated.py  basic.py
faran/mppi/: accelerated.py  basic.py  common.py
faran/obstacles/: __init__.py  accelerated.py  basic.py  common.py  factory.py
faran/predictors/: __init__.py  common.py  factory.py
faran/samplers/: factory.py
faran/trajectories/: factory.py
faran/types/: __init__.py  array.py
notebooks/: 01_basic_path_following.ipynb  02_path_following_with_boundaries.ipynb  03_obstacle_avoidance.ipynb  04_obstacle_avoidance_with_uncertainty.ipynb
tests/: conftest.py  test_assignment.py  test_bicycle.py  test_boundary.py  test_collector.py  test_cost.py  test_curvilinear.py  test_cvm.py  test_distance.py  test_docs.py  test_error.py  test_example.py  test_filter.py  test_integrator.py  test_metrics.py  test_model.py  test_mpcc.py  test_mppi.py  test_notebooks.py  test_obstacles.py  test_propagator.py  test_sampler.py  test_trajectory.py  test_unicycle.py  test_virtual.py
tests/benchmarks/: __init__.py  bench_mpcc.py  bench_risk.py  conftest.py  mpcc.py  report.py
tests/dsl/: __init__.py  costs.py  covariance.py  data.py  estimate.py  estimator.py  integrator.py  model.py  mppi.py  numeric.py  prediction.py  stubs.py  type.py
tests/examples/: __init__.py  common.py  factory.py  jax_mpcc.py  numpy_mpcc.py
tests/notebooks/: __init__.py  cells.py  cli.py  generate.py  notebook.py  parse.py  serialize.py
tests/tasks/: __init__.py  tasks.py
tests/test_estimator/: test_clamp.py  test_common.py  test_finite.py  test_kalman.py  test_noise.py
tests/test_predictor/: test_static.py
tests/test_propagator/: test_common.py  test_ekf.py  test_linear.py
tests/utilities/: __init__.py  notebooks.py  profile.py  root.py  visualize.py
tests/visualize/: __init__.py  factory.py  mpcc.py  root.py  simulation.py  visualize.py
trajax/: __init__.py  factory.py  jax.py  model.py  namespace.py  numpy.py  type.py
trajax/bicycle/: __init__.py  accelerated.py  basic.py  common.py  model.py
trajax/collectors/: access.py  factory.py  obstacles.py  registry.py  risk.py  state.py
trajax/costs/: __init__.py  accelerated.py  (+4 more)
visualizer/: .gitignore  .gitlab-ci.yml  README.md  __init__.py  package-lock.json  package.json  pyproject.toml
visualizer/api/: __init__.py  factory.py  mpcc.py  root.py  simulation.py
visualizer/core/: README.md  biome.json  esbuild.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
visualizer/core/src/browser/: index.tsx
visualizer/core/src/browser/components/: AdditionalPlotsContainer.tsx  App.tsx  Controls.tsx  ControlsContainer.tsx  InfoPanel.tsx  SidebarToggle.tsx  additional-plot.ts  trajectory-plot.ts  types.ts
visualizer/core/src/browser/components/additional/: bands.ts  bounds.ts  factory.ts  seriesLines.ts  seriesMarkers.ts  updater.ts  utils.ts
visualizer/core/src/browser/components/traces/: actual.ts  forecasts.ts  ghost.ts  obstacles.ts  reference.ts  road.ts  trajectories.ts  uncertainties.ts  updater.ts  vehicle.ts
visualizer/core/src/browser/components/trajectory/: actual.ts  boundary.ts  factory.ts  forecasts.ts  ghost.ts  obstacles.ts  reference.ts  road.ts  trajectories.ts  uncertainties.ts  updater.ts  vehicle.ts
visualizer/core/src/core/: defaults.ts  schema.ts  types.ts
visualizer/core/src/styles/: main.css
visualizer/core/src/templates/: base.ts  body.html
visualizer/core/src/types/: plotly.d.ts
visualizer/core/src/utils/: color.ts  geometry.ts  math.ts  plots.ts
visualizer/core/src/visualization/: visualizer.ts
visualizer/core/tests/: color.test.ts  geometry.test.ts  math.test.ts  placeholder.test.ts
visualizer/faran_visualizer/api/: __init__.py  config.py  factory.py  mpcc.py  simulation.py
visualizer/src/browser/: index.tsx  legend-state.ts  state.ts  update.ts
visualizer/src/browser/components/: App.tsx  ControlsContainer.tsx  InfoPanel.tsx  additional-plot.ts  error-plot.ts  progress-plot.ts  trajectory-plot.ts
visualizer/src/cli/: index.ts
visualizer/src/core/: defaults.ts  schema.ts  types.ts
visualizer/src/styles/: main.css
visualizer/src/templates/: body.html
visualizer/src/types/: bundle.d.ts
visualizer/src/utils/: plot.ts
visualizer/src/visualization/: Visualizer.ts
visualizer/trajax_visualizer/: __init__.py
visualizer/trajax_visualizer/api/: __init__.py  factory.py  mpcc.py  simulation.py
visualizer/trajax_visualizer/assets/: __init__.py  cli.js
visualizer/trajax_visualizer/tests/: test_api.py
(+355 files in other folders)
