[project]
name = "trajax"
version = "0.1.0"
description = "A library providing a performant NumPy/JAX implementations of an MPPI controller."
authors = [{ name = "Zurab Mujirishvili", email = "zurab.mujirishvili@fau.de" }]
readme = "README.md"
requires-python = ">=3.13"
license-files = ["LICEN[CS]E*"]
keywords = [
    "trajectory planning",
    "robotics",
    "autonomous systems",
    "safety",
    "jax",
    "mppi",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = ["numtypes>=0.5.1", "jax>=0.8.1", "jaxtyping>=0.3.4"]

[project.optional-dependencies]
type-checking = ["beartype>=0.22.9"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.407",
    "ruff>=0.14.10",
    "beartype>=0.22.9",
]
doc = ["typi>=0.1.1"]
test = [
    "aiofiles>=25.1.0",
    "aiopath>=0.7.7",
    "bokeh>=3.8.1", 
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-watcher>=0.4.3",
]
benchmark = [
    "msgspec>=0.20.0",
    "pytest-benchmark>=5.2.3",
    "rich>=14.2.0",
]

[tool.uv]
link-mode = "copy"
default-groups = ["dev", "test", "benchmark", "doc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trajax"]

[tool.pytest.ini_options]
pythonpath = [".", "trajax", "tests"]
python_files = ["test_*.py", "bench_*.py"]
python_functions = ["test_*", "bench_*"]
markers = [
    "integration: Mark the test as an integration test.",
    "visualize: Mark the test to produce visualization data using the given visualizer.",
    "benchmark: Performance benchmarks (deselected by default, use --benchmark-enable)",
]
addopts = "--benchmark-skip"

[tool.pyright]
include = ["trajax", "tests"]
exclude = [
    "**/__pycache__",
    "tests/test_cost.py", # Pyright can't handle inference in this file.
]

[tool.ruff.lint]
extend-select = ["RUF018"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "RUF018", # Allow Walrus operator in asserts in tests
    "F841",   # Allow unused variables in tests
    "F722",   # Ignore syntax error in forward references for jaxtyping types
]
"tests/conftest.py" = [
    "E402", # Ignore module level import not at top of file
]
"**/accelerated.py" = [
    "F722", # Ignore syntax error in forward references for jaxtyping types
    "F821", # Ignore undefined names in JIT-compiled functions
]
"trajax/types/factory.py" = [
    "F811", # Ignore redefinition of imported names (ruff bug)
]

[tool.pytest-watcher]
now = "true"
