[project]
name = "trajax"
dynamic = ["version"]
description = "A library providing performant NumPy & JAX implementations of an MPPI planner, along with implementation of related algorithms/tools."
authors = [{ name = "Zurab Mujirishvili", email = "zurab.mujirishvili@fau.de" }]
readme = "README.md"
requires-python = ">=3.13"
license-files = ["LICEN[CS]E*"]
keywords = [
    "trajectory planning",
    "robotics",
    "autonomous systems",
    "safety",
    "jax",
    "mppi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numtypes>=0.5.1",
    "jax>=0.8.2",
    "jaxtyping>=0.3.5",
    "riskit>=0.2.2",
    "scipy>=1.17.0",
    "beartype>=0.22.9",
    "deepmerge>=2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "ruff>=0.14.11",
]
doc = ["typi>=0.1.1"]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-subtests>=0.15.0",
    "pytest-watcher>=0.6.3",
    "trajax-visualizer",
]
benchmark = [
    "msgspec>=0.20.0",
    "pytest-benchmark>=5.2.3",
    "rich>=14.2.0",
    "typer>=0.21.1",
]

[tool.uv]
link-mode = "copy"
default-groups = ["dev", "test", "benchmark", "doc"]

[tool.uv.sources]
trajax-visualizer = { path = "visualizer", editable = true }

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.sdist]
include = [
  "trajax/",
  "LICENSE",
  "README.md",
  "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["trajax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py", "bench_*.py"]
python_classes = ["test_*"]
python_functions = ["test_*", "bench_*", "test"]
markers = [
    "integration: Mark the test as an integration test.",
    "visualize: Mark the test to produce visualization data using the given visualizer.",
    "benchmark: Performance benchmarks (deselected by default, use --benchmark-enable)",
]
addopts = "-m 'not integration and not benchmark'"

[tool.pyright]
include = ["trajax", "tests/tasks", "tests/visualize", "tests/benchmarks"]
exclude = ["**/__pycache__"]

[tool.ruff.lint]
extend-select = ["RUF018"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "RUF018", # Allow Walrus operator in asserts in tests
    "F841",   # Allow unused variables in tests
    "F722",   # Ignore syntax error in forward references for jaxtyping types
]
"tests/conftest.py" = [
    "E402", # Ignore module level import not at top of file
]
"**/accelerated.py" = [
    "F722", # Ignore syntax error in forward references for jaxtyping types
    "F821", # Ignore undefined names in JIT-compiled functions
]
"**/namespace.py" = [
    "F811", # Ignore redefinition of imported names (ruff bug)
]

[tool.pytest-watcher]
now = "true"
