[project]
name = "trajax-visualizer"
dynamic = ["version"]
description = "Interactive visualization tool for trajax trajectory planning simulations"
authors = [{ name = "Zurab Mujirishvili", email = "zurab.mujirishvili@fau.de" }]
readme = "README.md"
requires-python = ">=3.13"
license-files = ["LICEN[CS]E*"]
keywords = [
    "visualization",
    "simulation",
    "trajectory planning",
    "robotics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "trajax",
    "aiofiles>=25.1.0",
    "aiopath>=0.7.7",
    "msgspec>=0.20.0",
    "numtypes>=0.5.1",
    "numpy>=2.0.0",
]

[tool.uv.sources]
trajax = { path = "..", editable = true }

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "ruff>=0.14.11",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
link-mode = "copy"
default-groups = ["dev", "test"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
root = ".."

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
root = ".."

[tool.hatch.build.targets.sdist]
include = [
    "trajax_visualizer/",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["trajax_visualizer"]

[tool.hatch.build.targets.wheel.shared-data]
"trajax_visualizer/assets" = "trajax_visualizer/assets"

[tool.pyright]
include = ["trajax_visualizer"]
exclude = ["**/__pycache__"]

[tool.ruff.lint]
extend-select = ["RUF018"]
