[project]
name = "faran-visualizer"
dynamic = ["version"]
description = "Interactive visualization tool for faran trajectory planning simulations"
authors = [{ name = "Zurab Mujirishvili", email = "zurab.mujirishvili@fau.de" }]
readme = "README.md"
requires-python = ">=3.13"
license-files = ["LICEN[CS]E*"]
keywords = [
    "visualization",
    "simulation",
    "trajectory planning",
    "robotics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "faran",
    "aiofiles>=25.1.0",
    "aiopath>=0.7.7",
    "msgspec>=0.20.0",
    "numtypes>=0.5.1",
    "numpy>=2.4.2",
]

[tool.uv.sources]
faran = { path = "..", editable = true }

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "ruff>=0.15.1",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
link-mode = "copy"
default-groups = ["dev", "test"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
root = ".."

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"
root = ".."

[tool.hatch.build.targets.sdist]
include = [
    "faran_visualizer/",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]
exclude = ["core/"]

[tool.hatch.build.targets.sdist.force-include]
"faran_visualizer/assets/cli.js" = "faran_visualizer/assets/cli.js"

[tool.hatch.build.targets.wheel]
packages = ["faran_visualizer"]

[tool.hatch.build.targets.wheel.force-include]
"faran_visualizer/assets/cli.js" = "faran_visualizer/assets/cli.js"

[tool.pyright]
include = ["faran_visualizer"]
exclude = ["**/__pycache__"]

[tool.ruff.lint]
extend-select = ["RUF018"]
